--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,9 +1,28 @@
-<h1>Update your password</h1>
+<div class="section">
+  <div class="columns is-centered">
+    <div class="column is-4">
+      <div class="box">
+        <h1 class="title has-text-centered">Update Your Password</h1>
+        <p class="subtitle has-text-centered has-text-grey">Enter your new password below</p>
+        
+        <%= tag.div(flash[:alert], class: "notification is-danger is-light") if flash[:alert] %>
 
-<%= tag.div(flash[:alert], style: "color:red") if flash[:alert] %>
+        <%= form_with url: password_path(params[:token]), method: :put do |form| %>
+          <div class="field">
+            <label class="label">New Password</label>
+            <%= form.password_field :password, required: true, autocomplete: "new-password", 
+                placeholder: "Enter new password", maxlength: 72, class: "input" %>
+          </div>
 
-<%= form_with url: password_path(params[:token]), method: :put do |form| %>
-  <%= form.password_field :password, required: true, autocomplete: "new-password", placeholder: "Enter new password", maxlength: 72 %><br>
-  <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password", placeholder: "Repeat new password", maxlength: 72 %><br>
-  <%= form.submit "Save" %>
-<% end %>
+          <div class="field">
+            <label class="label">Confirm Password</label>
+            <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password", 
+                placeholder: "Repeat new password", maxlength: 72, class: "input" %>
+          </div>
+
+          <%= form.submit "Save", class: "button is-primary is-fullwidth" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
